<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".EditProfileActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#04B486"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:text="@string/title_activity_addbook"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:padding="5dp" >

                <RelativeLayout
                    android:id="@+id/rl_imgOuter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#04B486" >

                    <ImageView
                        android:id="@+id/img_book"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="#F2F2F2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <ProgressBar
                        android:id="@+id/pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_browseImage"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:background="#04b486"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/btn_browse"
                    android:textColor="#F2F2F2"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_bookName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_bookName"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_bookISBN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_isbn"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_bookUrl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_url"
                android:inputType="textUri"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_condition"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_condition"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_issueDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_issuedate"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|top|left"
                android:hint="@string/hint_descri"
                android:inputType="textPostalAddress"
                android:padding="5dp"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="0dip"
                    android:layout_height="50dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/btn_submit" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="0dip"
                    android:layout_height="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/btn_reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>