<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".EditProfileActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_nion"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:text="@string/title_activity_edit_profile"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_userName"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:visibility="gone"
                android:gravity="center|left"
                android:hint="@string/hint_email"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_aboutme"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|top|left"
                android:hint="@string/hint_about"
                android:layout_marginTop="5dp"
                android:inputType="textPostalAddress|textMultiLine"
                android:padding="5dp"
                android:scrollbars="vertical" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_confirmPass"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/hint_confirmPass"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="15dp"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dip"
                    android:layout_height="50dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/btn_update" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="0dip"
                    android:layout_height="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/btn_reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>